# navina-ambient

./: .gitignore  pyproject.toml
backend/: .gitignore  docker-compose.yml  init-db.sql  setup_localstack.sh
backend/audio_processing_service/: Dockerfile  config.py  main.py  requirements.txt
backend/audio_processing_service/api/: routes.py
backend/audio_processing_service/models/: audio_buffer.py  enums.py
backend/audio_processing_service/processing/: audio_processor.py  transcription_processor.py  vad_processor.py
backend/audio_processing_service/utils/: kinesis_utils.py  redis_manager.py
backend/core_service/: Dockerfile  database.py  logger.py  main.py  models.py  requirements.txt  schemas.py
backend/core_service/api/: auth.py  documentations.py  notes.py  pairing.py  recordings.py  sessions.py  summary.py  visits.py
backend/core_service/migrations/: env.py
backend/core_service/services/: external_services.py
backend/core_service/utils/: general.py  security.py
backend/navina_insights_service/: main.py  requirements.txt
backend/summarization_service/: Dockerfile  logger.py  main.py  requirements.txt
backend/summarization_service/auto_documentation/: constants.py  documentation.py  processors.py  prompts.py  schemas.py  types.py
backend/summarization_service/auto_documentation/diagnosis/: diagnosis.py  test.py
backend/summarization_service/auto_documentation/labs/: labs.py  process.py  test.py
backend/summarization_service/auto_documentation/meds/: meds.py  (+1 more)
mobile/navina-ambient-recorder/: App.js  app.json  package-lock.json  package.json
(+14 files in other folders)
