[tool.poetry]
name = "navina-ambient"
version = "0.1.0"
description = ""
authors = ["gal.eyal <gal.eyal@navina.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
passlib = "^1.7.4"
aioredis = "^2.0.1"
openai = "^1.47.0"
numpy = "^2.0"
scipy = "^1.13"
pydub = "^0.25.1"
pyannote-audio = "^3.3.1"
httpx = "^0.27.2"
pydantic = "^2.8.2"
aiobotocore = "^2.14.0"
python-multipart = "^0.0.9"
soundfile = "^0.12.1"
alembic = "^1.13.2"
jose = "^1.0.0"
pandera = "^0.20.4"


[tool.poetry.group.dev.dependencies]
localstack = "^3.7.0"
awscli-local = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

